// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateScaffold > cycle_30_v1 content is frozen 1`] = `
{
  "blocks": [
    {
      "guidance": {
        "cadenceMaxRpm": 95,
        "cadenceMinRpm": 80,
        "kind": "cycle",
        "posture": "seated",
        "rpeMax": 3,
        "rpeMin": 2,
      },
      "intensity": "easy",
      "label": "Arrive on the bike",
      "movementFocus": "Comfortable pedal stroke and relaxed upper body.",
      "position": 0,
      "recipeBlockKey": "cycle_arrive",
      "segmentType": "warm_up",
      "targetDurationMs": 240000,
      "teachingGoal": "Establish rhythm and preview the ride shape.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 90,
        "cadenceMinRpm": 75,
        "kind": "cycle",
        "posture": "mixed",
        "rpeMax": 5,
        "rpeMin": 4,
      },
      "intensity": "mod",
      "label": "Build the base",
      "movementFocus": "Smooth pressure through the full pedal stroke.",
      "position": 1,
      "recipeBlockKey": "cycle_build_base",
      "segmentType": "climb",
      "targetDurationMs": 240000,
      "teachingGoal": "Add sustainable work without spending the peak.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 75,
        "cadenceMinRpm": 60,
        "kind": "cycle",
        "posture": "seated",
        "rpeMax": 6,
        "rpeMin": 5,
      },
      "intensity": "mod",
      "label": "Seated climb",
      "movementFocus": "Stable hips and consistent cadence.",
      "position": 2,
      "recipeBlockKey": "cycle_seated_climb",
      "segmentType": "climb",
      "targetDurationMs": 300000,
      "teachingGoal": "Hold controlled climbing effort.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 110,
        "cadenceMinRpm": 95,
        "kind": "cycle",
        "posture": "seated",
        "rpeMax": 7,
        "rpeMin": 6,
      },
      "intensity": "hard",
      "label": "Speed control",
      "movementFocus": "Quick, even turnover.",
      "position": 3,
      "recipeBlockKey": "cycle_speed_control",
      "segmentType": "sprint",
      "targetDurationMs": 240000,
      "teachingGoal": "Practice faster cadence while keeping control.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 75,
        "cadenceMinRpm": 60,
        "kind": "cycle",
        "posture": "standing",
        "rpeMax": 8,
        "rpeMin": 7,
      },
      "intensity": "hard",
      "label": "Standing climb",
      "movementFocus": "Balanced standing posture and steady rhythm.",
      "position": 4,
      "recipeBlockKey": "cycle_standing_climb",
      "segmentType": "climb",
      "targetDurationMs": 300000,
      "teachingGoal": "Build the main sustained challenge.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 105,
        "cadenceMinRpm": 85,
        "kind": "cycle",
        "posture": "mixed",
        "rpeMax": 9,
        "rpeMin": 8,
      },
      "intensity": "hard",
      "label": "Peak effort",
      "movementFocus": "Strong acceleration followed by control.",
      "position": 5,
      "recipeBlockKey": "cycle_peak",
      "segmentType": "sprint",
      "targetDurationMs": 240000,
      "teachingGoal": "Deliver one clear peak with recoverable form.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 90,
        "cadenceMinRpm": 70,
        "kind": "cycle",
        "posture": "seated",
        "rpeMax": 3,
        "rpeMin": 1,
      },
      "intensity": "easy",
      "label": "Return and release",
      "movementFocus": "Easy cadence and relaxed breathing.",
      "position": 6,
      "recipeBlockKey": "cycle_release",
      "segmentType": "cool_down",
      "targetDurationMs": 240000,
      "teachingGoal": "Bring effort down and close the ride.",
    },
  ],
  "recipeId": "cycle_30_v1",
  "targetDurationMs": 1800000,
  "template": "cycle",
}
`;

exports[`generateScaffold > cycle_45_v1 content is frozen 1`] = `
{
  "blocks": [
    {
      "guidance": {
        "cadenceMaxRpm": 95,
        "cadenceMinRpm": 80,
        "kind": "cycle",
        "posture": "seated",
        "rpeMax": 3,
        "rpeMin": 2,
      },
      "intensity": "easy",
      "label": "Arrive on the bike",
      "movementFocus": "Comfortable pedal stroke and relaxed upper body.",
      "position": 0,
      "recipeBlockKey": "cycle_arrive",
      "segmentType": "warm_up",
      "targetDurationMs": 360000,
      "teachingGoal": "Establish rhythm and preview the ride shape.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 90,
        "cadenceMinRpm": 75,
        "kind": "cycle",
        "posture": "mixed",
        "rpeMax": 5,
        "rpeMin": 4,
      },
      "intensity": "mod",
      "label": "Build the base",
      "movementFocus": "Smooth pressure through the full pedal stroke.",
      "position": 1,
      "recipeBlockKey": "cycle_build_base",
      "segmentType": "climb",
      "targetDurationMs": 360000,
      "teachingGoal": "Add sustainable work without spending the peak.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 75,
        "cadenceMinRpm": 60,
        "kind": "cycle",
        "posture": "seated",
        "rpeMax": 6,
        "rpeMin": 5,
      },
      "intensity": "mod",
      "label": "Seated climb",
      "movementFocus": "Stable hips and consistent cadence.",
      "position": 2,
      "recipeBlockKey": "cycle_seated_climb",
      "segmentType": "climb",
      "targetDurationMs": 420000,
      "teachingGoal": "Hold controlled climbing effort.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 110,
        "cadenceMinRpm": 95,
        "kind": "cycle",
        "posture": "seated",
        "rpeMax": 7,
        "rpeMin": 6,
      },
      "intensity": "hard",
      "label": "Speed control",
      "movementFocus": "Quick, even turnover.",
      "position": 3,
      "recipeBlockKey": "cycle_speed_control",
      "segmentType": "sprint",
      "targetDurationMs": 360000,
      "teachingGoal": "Practice faster cadence while keeping control.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 75,
        "cadenceMinRpm": 60,
        "kind": "cycle",
        "posture": "standing",
        "rpeMax": 8,
        "rpeMin": 7,
      },
      "intensity": "hard",
      "label": "Standing climb",
      "movementFocus": "Balanced standing posture and steady rhythm.",
      "position": 4,
      "recipeBlockKey": "cycle_standing_climb",
      "segmentType": "climb",
      "targetDurationMs": 420000,
      "teachingGoal": "Build the main sustained challenge.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 105,
        "cadenceMinRpm": 85,
        "kind": "cycle",
        "posture": "mixed",
        "rpeMax": 9,
        "rpeMin": 8,
      },
      "intensity": "hard",
      "label": "Peak effort",
      "movementFocus": "Strong acceleration followed by control.",
      "position": 5,
      "recipeBlockKey": "cycle_peak",
      "segmentType": "sprint",
      "targetDurationMs": 420000,
      "teachingGoal": "Deliver one clear peak with recoverable form.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 90,
        "cadenceMinRpm": 70,
        "kind": "cycle",
        "posture": "seated",
        "rpeMax": 3,
        "rpeMin": 1,
      },
      "intensity": "easy",
      "label": "Return and release",
      "movementFocus": "Easy cadence and relaxed breathing.",
      "position": 6,
      "recipeBlockKey": "cycle_release",
      "segmentType": "cool_down",
      "targetDurationMs": 360000,
      "teachingGoal": "Bring effort down and close the ride.",
    },
  ],
  "recipeId": "cycle_45_v1",
  "targetDurationMs": 2700000,
  "template": "cycle",
}
`;

exports[`generateScaffold > cycle_60_v1 content is frozen 1`] = `
{
  "blocks": [
    {
      "guidance": {
        "cadenceMaxRpm": 95,
        "cadenceMinRpm": 80,
        "kind": "cycle",
        "posture": "seated",
        "rpeMax": 3,
        "rpeMin": 2,
      },
      "intensity": "easy",
      "label": "Arrive on the bike",
      "movementFocus": "Comfortable pedal stroke and relaxed upper body.",
      "position": 0,
      "recipeBlockKey": "cycle_arrive",
      "segmentType": "warm_up",
      "targetDurationMs": 480000,
      "teachingGoal": "Establish rhythm and preview the ride shape.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 90,
        "cadenceMinRpm": 75,
        "kind": "cycle",
        "posture": "mixed",
        "rpeMax": 5,
        "rpeMin": 4,
      },
      "intensity": "mod",
      "label": "Build the base",
      "movementFocus": "Smooth pressure through the full pedal stroke.",
      "position": 1,
      "recipeBlockKey": "cycle_build_base",
      "segmentType": "climb",
      "targetDurationMs": 480000,
      "teachingGoal": "Add sustainable work without spending the peak.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 75,
        "cadenceMinRpm": 60,
        "kind": "cycle",
        "posture": "seated",
        "rpeMax": 6,
        "rpeMin": 5,
      },
      "intensity": "mod",
      "label": "Seated climb",
      "movementFocus": "Stable hips and consistent cadence.",
      "position": 2,
      "recipeBlockKey": "cycle_seated_climb",
      "segmentType": "climb",
      "targetDurationMs": 600000,
      "teachingGoal": "Hold controlled climbing effort.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 110,
        "cadenceMinRpm": 95,
        "kind": "cycle",
        "posture": "seated",
        "rpeMax": 7,
        "rpeMin": 6,
      },
      "intensity": "hard",
      "label": "Speed control",
      "movementFocus": "Quick, even turnover.",
      "position": 3,
      "recipeBlockKey": "cycle_speed_control",
      "segmentType": "sprint",
      "targetDurationMs": 480000,
      "teachingGoal": "Practice faster cadence while keeping control.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 75,
        "cadenceMinRpm": 60,
        "kind": "cycle",
        "posture": "standing",
        "rpeMax": 8,
        "rpeMin": 7,
      },
      "intensity": "hard",
      "label": "Standing climb",
      "movementFocus": "Balanced standing posture and steady rhythm.",
      "position": 4,
      "recipeBlockKey": "cycle_standing_climb",
      "segmentType": "climb",
      "targetDurationMs": 600000,
      "teachingGoal": "Build the main sustained challenge.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 105,
        "cadenceMinRpm": 85,
        "kind": "cycle",
        "posture": "mixed",
        "rpeMax": 9,
        "rpeMin": 8,
      },
      "intensity": "hard",
      "label": "Peak effort",
      "movementFocus": "Strong acceleration followed by control.",
      "position": 5,
      "recipeBlockKey": "cycle_peak",
      "segmentType": "sprint",
      "targetDurationMs": 480000,
      "teachingGoal": "Deliver one clear peak with recoverable form.",
    },
    {
      "guidance": {
        "cadenceMaxRpm": 90,
        "cadenceMinRpm": 70,
        "kind": "cycle",
        "posture": "seated",
        "rpeMax": 3,
        "rpeMin": 1,
      },
      "intensity": "easy",
      "label": "Return and release",
      "movementFocus": "Easy cadence and relaxed breathing.",
      "position": 6,
      "recipeBlockKey": "cycle_release",
      "segmentType": "cool_down",
      "targetDurationMs": 480000,
      "teachingGoal": "Bring effort down and close the ride.",
    },
  ],
  "recipeId": "cycle_60_v1",
  "targetDurationMs": 3600000,
  "template": "cycle",
}
`;

exports[`generateScaffold > hiit_30_v1 content is frozen 1`] = `
{
  "blocks": [
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": null,
        "rounds": null,
        "sequenceFocus": "Mobility, bracing, and low-impact locomotion.",
        "workMs": null,
      },
      "intensity": "easy",
      "label": "Movement prep",
      "movementFocus": "Mobility, bracing, and low-impact locomotion.",
      "position": 0,
      "recipeBlockKey": "hiit_prep",
      "segmentType": "warm_up",
      "targetDurationMs": 240000,
      "teachingGoal": "Prepare joints and rehearse the movement vocabulary.",
    },
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": 30000,
        "rounds": 4,
        "sequenceFocus": "Squat, hinge, push, and trunk patterns.",
        "workMs": 30000,
      },
      "intensity": "mod",
      "label": "Pattern practice",
      "movementFocus": "Squat, hinge, push, and trunk patterns.",
      "position": 1,
      "recipeBlockKey": "hiit_practice",
      "segmentType": null,
      "targetDurationMs": 240000,
      "teachingGoal": "Practice the interval rhythm before intensity rises.",
    },
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": 30000,
        "rounds": 6,
        "sequenceFocus": "Lower body, upper body, locomotion, and trunk.",
        "workMs": 30000,
      },
      "intensity": "hard",
      "label": "Circuit A",
      "movementFocus": "Lower body, upper body, locomotion, and trunk.",
      "position": 2,
      "recipeBlockKey": "hiit_circuit_a",
      "segmentType": null,
      "targetDurationMs": 360000,
      "teachingGoal": "Build repeatable work across major movement patterns.",
    },
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": null,
        "rounds": null,
        "sequenceFocus": "Walk, breathe, and review the next sequence.",
        "workMs": null,
      },
      "intensity": "easy",
      "label": "Reset",
      "movementFocus": "Walk, breathe, and review the next sequence.",
      "position": 3,
      "recipeBlockKey": "hiit_reset",
      "segmentType": "recovery",
      "targetDurationMs": 120000,
      "teachingGoal": "Bring breathing down and prepare the second circuit.",
    },
    {
      "guidance": {
        "equipment": "dumbbells_optional",
        "kind": "hiit",
        "recoveryMs": 30000,
        "rounds": 6,
        "sequenceFocus": "Unilateral legs, upper body, trunk, and locomotion.",
        "workMs": 30000,
      },
      "intensity": "hard",
      "label": "Circuit B",
      "movementFocus": "Unilateral legs, upper body, trunk, and locomotion.",
      "position": 4,
      "recipeBlockKey": "hiit_circuit_b",
      "segmentType": null,
      "targetDurationMs": 360000,
      "teachingGoal": "Repeat the structure with new movement emphasis.",
    },
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": 30000,
        "rounds": 4,
        "sequenceFocus": "Simple whole-body patterns with low-complexity options.",
        "workMs": 30000,
      },
      "intensity": "hard",
      "label": "Finisher",
      "movementFocus": "Simple whole-body patterns with low-complexity options.",
      "position": 5,
      "recipeBlockKey": "hiit_finisher",
      "segmentType": "sprint",
      "targetDurationMs": 240000,
      "teachingGoal": "Create one short, clearly bounded peak.",
    },
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": null,
        "rounds": null,
        "sequenceFocus": "Easy locomotion, mobility, and breathing.",
        "workMs": null,
      },
      "intensity": "easy",
      "label": "Cool down",
      "movementFocus": "Easy locomotion, mobility, and breathing.",
      "position": 6,
      "recipeBlockKey": "hiit_cool_down",
      "segmentType": "cool_down",
      "targetDurationMs": 240000,
      "teachingGoal": "Reduce effort gradually and close the session.",
    },
  ],
  "recipeId": "hiit_30_v1",
  "targetDurationMs": 1800000,
  "template": "hiit",
}
`;

exports[`generateScaffold > hiit_45_v1 content is frozen 1`] = `
{
  "blocks": [
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": null,
        "rounds": null,
        "sequenceFocus": "Mobility, bracing, and low-impact locomotion.",
        "workMs": null,
      },
      "intensity": "easy",
      "label": "Movement prep",
      "movementFocus": "Mobility, bracing, and low-impact locomotion.",
      "position": 0,
      "recipeBlockKey": "hiit_prep",
      "segmentType": "warm_up",
      "targetDurationMs": 360000,
      "teachingGoal": "Prepare joints and rehearse the movement vocabulary.",
    },
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": 30000,
        "rounds": 5,
        "sequenceFocus": "Squat, hinge, push, and trunk patterns.",
        "workMs": 30000,
      },
      "intensity": "mod",
      "label": "Pattern practice",
      "movementFocus": "Squat, hinge, push, and trunk patterns.",
      "position": 1,
      "recipeBlockKey": "hiit_practice",
      "segmentType": null,
      "targetDurationMs": 300000,
      "teachingGoal": "Practice the interval rhythm before intensity rises.",
    },
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": 30000,
        "rounds": 9,
        "sequenceFocus": "Lower body, upper body, locomotion, and trunk.",
        "workMs": 30000,
      },
      "intensity": "hard",
      "label": "Circuit A",
      "movementFocus": "Lower body, upper body, locomotion, and trunk.",
      "position": 2,
      "recipeBlockKey": "hiit_circuit_a",
      "segmentType": null,
      "targetDurationMs": 540000,
      "teachingGoal": "Build repeatable work across major movement patterns.",
    },
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": null,
        "rounds": null,
        "sequenceFocus": "Walk, breathe, and review the next sequence.",
        "workMs": null,
      },
      "intensity": "easy",
      "label": "Reset",
      "movementFocus": "Walk, breathe, and review the next sequence.",
      "position": 3,
      "recipeBlockKey": "hiit_reset",
      "segmentType": "recovery",
      "targetDurationMs": 180000,
      "teachingGoal": "Bring breathing down and prepare the second circuit.",
    },
    {
      "guidance": {
        "equipment": "dumbbells_optional",
        "kind": "hiit",
        "recoveryMs": 30000,
        "rounds": 9,
        "sequenceFocus": "Unilateral legs, upper body, trunk, and locomotion.",
        "workMs": 30000,
      },
      "intensity": "hard",
      "label": "Circuit B",
      "movementFocus": "Unilateral legs, upper body, trunk, and locomotion.",
      "position": 4,
      "recipeBlockKey": "hiit_circuit_b",
      "segmentType": null,
      "targetDurationMs": 540000,
      "teachingGoal": "Repeat the structure with new movement emphasis.",
    },
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": 30000,
        "rounds": 7,
        "sequenceFocus": "Simple whole-body patterns with low-complexity options.",
        "workMs": 30000,
      },
      "intensity": "hard",
      "label": "Finisher",
      "movementFocus": "Simple whole-body patterns with low-complexity options.",
      "position": 5,
      "recipeBlockKey": "hiit_finisher",
      "segmentType": "sprint",
      "targetDurationMs": 420000,
      "teachingGoal": "Create one short, clearly bounded peak.",
    },
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": null,
        "rounds": null,
        "sequenceFocus": "Easy locomotion, mobility, and breathing.",
        "workMs": null,
      },
      "intensity": "easy",
      "label": "Cool down",
      "movementFocus": "Easy locomotion, mobility, and breathing.",
      "position": 6,
      "recipeBlockKey": "hiit_cool_down",
      "segmentType": "cool_down",
      "targetDurationMs": 360000,
      "teachingGoal": "Reduce effort gradually and close the session.",
    },
  ],
  "recipeId": "hiit_45_v1",
  "targetDurationMs": 2700000,
  "template": "hiit",
}
`;

exports[`generateScaffold > hiit_60_v1 content is frozen 1`] = `
{
  "blocks": [
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": null,
        "rounds": null,
        "sequenceFocus": "Mobility, bracing, and low-impact locomotion.",
        "workMs": null,
      },
      "intensity": "easy",
      "label": "Movement prep",
      "movementFocus": "Mobility, bracing, and low-impact locomotion.",
      "position": 0,
      "recipeBlockKey": "hiit_prep",
      "segmentType": "warm_up",
      "targetDurationMs": 480000,
      "teachingGoal": "Prepare joints and rehearse the movement vocabulary.",
    },
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": 30000,
        "rounds": 7,
        "sequenceFocus": "Squat, hinge, push, and trunk patterns.",
        "workMs": 30000,
      },
      "intensity": "mod",
      "label": "Pattern practice",
      "movementFocus": "Squat, hinge, push, and trunk patterns.",
      "position": 1,
      "recipeBlockKey": "hiit_practice",
      "segmentType": null,
      "targetDurationMs": 420000,
      "teachingGoal": "Practice the interval rhythm before intensity rises.",
    },
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": 30000,
        "rounds": 12,
        "sequenceFocus": "Lower body, upper body, locomotion, and trunk.",
        "workMs": 30000,
      },
      "intensity": "hard",
      "label": "Circuit A",
      "movementFocus": "Lower body, upper body, locomotion, and trunk.",
      "position": 2,
      "recipeBlockKey": "hiit_circuit_a",
      "segmentType": null,
      "targetDurationMs": 720000,
      "teachingGoal": "Build repeatable work across major movement patterns.",
    },
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": null,
        "rounds": null,
        "sequenceFocus": "Walk, breathe, and review the next sequence.",
        "workMs": null,
      },
      "intensity": "easy",
      "label": "Reset",
      "movementFocus": "Walk, breathe, and review the next sequence.",
      "position": 3,
      "recipeBlockKey": "hiit_reset",
      "segmentType": "recovery",
      "targetDurationMs": 240000,
      "teachingGoal": "Bring breathing down and prepare the second circuit.",
    },
    {
      "guidance": {
        "equipment": "dumbbells_optional",
        "kind": "hiit",
        "recoveryMs": 30000,
        "rounds": 12,
        "sequenceFocus": "Unilateral legs, upper body, trunk, and locomotion.",
        "workMs": 30000,
      },
      "intensity": "hard",
      "label": "Circuit B",
      "movementFocus": "Unilateral legs, upper body, trunk, and locomotion.",
      "position": 4,
      "recipeBlockKey": "hiit_circuit_b",
      "segmentType": null,
      "targetDurationMs": 720000,
      "teachingGoal": "Repeat the structure with new movement emphasis.",
    },
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": 30000,
        "rounds": 9,
        "sequenceFocus": "Simple whole-body patterns with low-complexity options.",
        "workMs": 30000,
      },
      "intensity": "hard",
      "label": "Finisher",
      "movementFocus": "Simple whole-body patterns with low-complexity options.",
      "position": 5,
      "recipeBlockKey": "hiit_finisher",
      "segmentType": "sprint",
      "targetDurationMs": 540000,
      "teachingGoal": "Create one short, clearly bounded peak.",
    },
    {
      "guidance": {
        "equipment": "bodyweight",
        "kind": "hiit",
        "recoveryMs": null,
        "rounds": null,
        "sequenceFocus": "Easy locomotion, mobility, and breathing.",
        "workMs": null,
      },
      "intensity": "easy",
      "label": "Cool down",
      "movementFocus": "Easy locomotion, mobility, and breathing.",
      "position": 6,
      "recipeBlockKey": "hiit_cool_down",
      "segmentType": "cool_down",
      "targetDurationMs": 480000,
      "teachingGoal": "Reduce effort gradually and close the session.",
    },
  ],
  "recipeId": "hiit_60_v1",
  "targetDurationMs": 3600000,
  "template": "hiit",
}
`;

exports[`generateScaffold > pilates_30_v1 content is frozen 1`] = `
{
  "blocks": [
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
        ],
      },
      "intensity": "easy",
      "label": "Arrive and breathe",
      "movementFocus": "Breath with neutral alignment.",
      "position": 0,
      "recipeBlockKey": "pilates_arrive",
      "segmentType": "warm_up",
      "targetDurationMs": 240000,
      "teachingGoal": "Establish breath, alignment, and control.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
        ],
      },
      "intensity": "easy",
      "label": "Mobilize",
      "movementFocus": "Articulation and controlled mobility.",
      "position": 1,
      "recipeBlockKey": "pilates_mobilize",
      "segmentType": "warm_up",
      "targetDurationMs": 240000,
      "teachingGoal": "Prepare the spine and major joints for loaded movement.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
        ],
      },
      "intensity": "mod",
      "label": "Center and stabilize",
      "movementFocus": "Deep core stability and pelvic control.",
      "position": 2,
      "recipeBlockKey": "pilates_center",
      "segmentType": null,
      "targetDurationMs": 300000,
      "teachingGoal": "Build trunk organization before larger ranges.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
          "band",
        ],
      },
      "intensity": "mod",
      "label": "Lower-body strength",
      "movementFocus": "Glutes, hips, and unilateral control.",
      "position": 3,
      "recipeBlockKey": "pilates_lower_body",
      "segmentType": null,
      "targetDurationMs": 300000,
      "teachingGoal": "Develop controlled hip and leg strength.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
          "light_weights",
        ],
      },
      "intensity": "mod",
      "label": "Upper-body posture",
      "movementFocus": "Scapular control and upper-back strength.",
      "position": 4,
      "recipeBlockKey": "pilates_upper_body",
      "segmentType": null,
      "targetDurationMs": 240000,
      "teachingGoal": "Support shoulder stability and upright posture.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
        ],
      },
      "intensity": "hard",
      "label": "Integrated flow",
      "movementFocus": "Whole-body coordination without rushing.",
      "position": 5,
      "recipeBlockKey": "pilates_flow",
      "segmentType": null,
      "targetDurationMs": 240000,
      "teachingGoal": "Connect familiar patterns into one controlled sequence.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
        ],
      },
      "intensity": "easy",
      "label": "Release",
      "movementFocus": "Gentle mobility and breath.",
      "position": 6,
      "recipeBlockKey": "pilates_release",
      "segmentType": "cool_down",
      "targetDurationMs": 240000,
      "teachingGoal": "Reduce effort and restore comfortable range.",
    },
  ],
  "recipeId": "pilates_30_v1",
  "targetDurationMs": 1800000,
  "template": "sculpt",
}
`;

exports[`generateScaffold > pilates_45_v1 content is frozen 1`] = `
{
  "blocks": [
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
        ],
      },
      "intensity": "easy",
      "label": "Arrive and breathe",
      "movementFocus": "Breath with neutral alignment.",
      "position": 0,
      "recipeBlockKey": "pilates_arrive",
      "segmentType": "warm_up",
      "targetDurationMs": 360000,
      "teachingGoal": "Establish breath, alignment, and control.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
        ],
      },
      "intensity": "easy",
      "label": "Mobilize",
      "movementFocus": "Articulation and controlled mobility.",
      "position": 1,
      "recipeBlockKey": "pilates_mobilize",
      "segmentType": "warm_up",
      "targetDurationMs": 360000,
      "teachingGoal": "Prepare the spine and major joints for loaded movement.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
        ],
      },
      "intensity": "mod",
      "label": "Center and stabilize",
      "movementFocus": "Deep core stability and pelvic control.",
      "position": 2,
      "recipeBlockKey": "pilates_center",
      "segmentType": null,
      "targetDurationMs": 420000,
      "teachingGoal": "Build trunk organization before larger ranges.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
          "band",
        ],
      },
      "intensity": "mod",
      "label": "Lower-body strength",
      "movementFocus": "Glutes, hips, and unilateral control.",
      "position": 3,
      "recipeBlockKey": "pilates_lower_body",
      "segmentType": null,
      "targetDurationMs": 420000,
      "teachingGoal": "Develop controlled hip and leg strength.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
          "light_weights",
        ],
      },
      "intensity": "mod",
      "label": "Upper-body posture",
      "movementFocus": "Scapular control and upper-back strength.",
      "position": 4,
      "recipeBlockKey": "pilates_upper_body",
      "segmentType": null,
      "targetDurationMs": 360000,
      "teachingGoal": "Support shoulder stability and upright posture.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
        ],
      },
      "intensity": "hard",
      "label": "Integrated flow",
      "movementFocus": "Whole-body coordination without rushing.",
      "position": 5,
      "recipeBlockKey": "pilates_flow",
      "segmentType": null,
      "targetDurationMs": 420000,
      "teachingGoal": "Connect familiar patterns into one controlled sequence.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
        ],
      },
      "intensity": "easy",
      "label": "Release",
      "movementFocus": "Gentle mobility and breath.",
      "position": 6,
      "recipeBlockKey": "pilates_release",
      "segmentType": "cool_down",
      "targetDurationMs": 360000,
      "teachingGoal": "Reduce effort and restore comfortable range.",
    },
  ],
  "recipeId": "pilates_45_v1",
  "targetDurationMs": 2700000,
  "template": "sculpt",
}
`;

exports[`generateScaffold > pilates_60_v1 content is frozen 1`] = `
{
  "blocks": [
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
        ],
      },
      "intensity": "easy",
      "label": "Arrive and breathe",
      "movementFocus": "Breath with neutral alignment.",
      "position": 0,
      "recipeBlockKey": "pilates_arrive",
      "segmentType": "warm_up",
      "targetDurationMs": 480000,
      "teachingGoal": "Establish breath, alignment, and control.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
        ],
      },
      "intensity": "easy",
      "label": "Mobilize",
      "movementFocus": "Articulation and controlled mobility.",
      "position": 1,
      "recipeBlockKey": "pilates_mobilize",
      "segmentType": "warm_up",
      "targetDurationMs": 480000,
      "teachingGoal": "Prepare the spine and major joints for loaded movement.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
        ],
      },
      "intensity": "mod",
      "label": "Center and stabilize",
      "movementFocus": "Deep core stability and pelvic control.",
      "position": 2,
      "recipeBlockKey": "pilates_center",
      "segmentType": null,
      "targetDurationMs": 600000,
      "teachingGoal": "Build trunk organization before larger ranges.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
          "band",
        ],
      },
      "intensity": "mod",
      "label": "Lower-body strength",
      "movementFocus": "Glutes, hips, and unilateral control.",
      "position": 3,
      "recipeBlockKey": "pilates_lower_body",
      "segmentType": null,
      "targetDurationMs": 600000,
      "teachingGoal": "Develop controlled hip and leg strength.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
          "light_weights",
        ],
      },
      "intensity": "mod",
      "label": "Upper-body posture",
      "movementFocus": "Scapular control and upper-back strength.",
      "position": 4,
      "recipeBlockKey": "pilates_upper_body",
      "segmentType": null,
      "targetDurationMs": 480000,
      "teachingGoal": "Support shoulder stability and upright posture.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
        ],
      },
      "intensity": "hard",
      "label": "Integrated flow",
      "movementFocus": "Whole-body coordination without rushing.",
      "position": 5,
      "recipeBlockKey": "pilates_flow",
      "segmentType": null,
      "targetDurationMs": 480000,
      "teachingGoal": "Connect familiar patterns into one controlled sequence.",
    },
    {
      "guidance": {
        "kind": "pilates",
        "optionalEquipment": [
          "mat",
        ],
      },
      "intensity": "easy",
      "label": "Release",
      "movementFocus": "Gentle mobility and breath.",
      "position": 6,
      "recipeBlockKey": "pilates_release",
      "segmentType": "cool_down",
      "targetDurationMs": 480000,
      "teachingGoal": "Reduce effort and restore comfortable range.",
    },
  ],
  "recipeId": "pilates_60_v1",
  "targetDurationMs": 3600000,
  "template": "sculpt",
}
`;
